[gd_scene load_steps=7 format=3 uid="uid://bn3whgwcfrryx"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_whasr"]
[ext_resource type="Texture2D" uid="uid://dk52wvnj4oq80" path="res://textures/cover.png" id="2_exc1b"]
[ext_resource type="AudioStream" uid="uid://cc257osdb4lff" path="res://sounds/Silly Fun.mp3" id="3_abgqh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ih36v"]
bg_color = Color(0.921569, 0.396078, 0.54902, 1)
border_width_left = 20
border_color = Color(0.278431, 0.894118, 0.941176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2feuu"]
bg_color = Color(0.168627, 0.623529, 0.709804, 1)
border_width_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2mr1"]
bg_color = Color(1, 1, 1, 0.807843)
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0

[node name="menu" type="Control"]
custom_minimum_size = Vector2(1024, 768)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_whasr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_exc1b")

[node name="HostButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 202.0
offset_top = 98.0
offset_right = 320.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 28
disabled = true
text = "Host
"

[node name="JoinButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 210.0
offset_top = 173.0
offset_right = 317.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 28
disabled = true
text = "Join
"

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0395833
anchor_top = 0.947222
anchor_right = 0.0395833
anchor_bottom = 0.947222
offset_top = -80.0
offset_right = 200.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_ih36v")
theme_override_styles/hover = SubResource("StyleBoxFlat_2feuu")
text = "Start"

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_right = 348.0
offset_bottom = 59.0
placeholder_text = "Input name here"
editable = false

[node name="ErrorMsg" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(1080, 120)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.34
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.713726, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Error message goes here"

[node name="LogContainer" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.889
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 119.88
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="LogContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Notification goes here"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_abgqh")
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 77.0
offset_top = 327.0
offset_right = 948.0
offset_bottom = -203.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_n2mr1")
text = "Note:
This is an unfinished game, the experience could be lacking. 
Press Esc to exit the gameplay

How to play:
* WASD to move, space to jump
* Press space in the pool to water the trees
* Pick up the fruits grown to get seed
* Press Q to plant a sapling (seed required)

Credit: pixabay/incompetech/craftpix/open game art/godot
/blender/distant latern/broken vector

2024 GGJ Hong Kong"

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
